# gzh-cli

./: .ai  .claudeignore  .gitignore  .gitlab-ci.yml  .golang-ci.yml  .golangci.bck.yml  .golangci.yml  .goreleaser.yml  .gosec.yaml  .gzquality.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.baseline  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODEBASE_CLEANUP_PLAN.md  Dockerfile  FEATURES.md  FunctionalDetails.md  IMMEDIATE_CLEANUP_ACTIONS.md  Makefile  Makefile.build.mk  Makefile.deps.mk  Makefile.dev.mk  Makefile.docker.mk  Makefile.lint.mk  Makefile.quality.mk  Makefile.test.mk  Makefile.tools.mk  PRODUCT.md  README.md  REFACTORING.md  REFACTORING_ANALYSIS_FINAL.md  REFACTORING_CHECKLIST.md  REFACTORING_COMPLETION_REPORT.md  REFACTORING_PROGRESS_UPDATE.md  REFACTORING_SUMMARY.md  SECURITY.md  SKIP.md  (+36 more)
.claude/: settings.local.json
.delve/: config.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github-backup/: ci.yml
.make/: build.mk
.roo/: mcp.json
api-docs/: README.md
benchmark-artifacts/: benchmark-report-20250730-160511.json  benchmark-report-20250730-160515.json
bindings/python/: MANIFEST.in  Makefile  README.md  libgzh.go  pyproject.toml  setup.py
bindings/python/examples/: basic_usage.py  bulk_clone_example.py
bindings/python/gzhclient/: __init__.py  client.py  exceptions.py  types.py
cmd/: AGENTS_COMMON.md  dev_env_wrapper.go  dev_env_wrapper_stub.go  doc.go  event.go  event_di.go  event_refactored.go  git.go  man.go  net_env_wrapper.go  net_env_wrapper_stub.go  pm_wrapper.go  pm_wrapper_stub.go  pm_wrapper_test.go  quality_wrapper.go  quality_wrapper_test.go  root.go  root_test.go  shellforge_wrapper.go  shellforge_wrapper_test.go  task-runner.go  version.go  version_test.go  webhook.go  webhook_di.go  webhook_simple_test.go
completions/: gzh-manager.fish  gzh-manager.zsh
debian/: control  postinst
docs/: CONTRIBUTING.md  DOCUMENTATION_COMPLETION_REPORT.md  DOCUMENTATION_RESTRUCTURING_PLAN.md  INDEX.md  LINT_STANDARDS.md  REFACTORING_PROGRESS_UPDATE.md  REFACTORING_SUMMARY.md  actions-policy-enforcement.md  actions-policy-schema.md  adr-001-architecture-simplification.md  architecture.md  bulk-clone-schema.json  configuration-hot-reloading.md  configuration-priority.md  configuration.md  debugging-guide.md  dependency-management.md  development-container.md  docker-network-profiles.md  documentation-summary.md  gcp-project-management.md  github-org-management-research.md  github-repo-management-requirements.md  gzh-schema.json  gzh-schema.yaml  gzh-yaml-quick-reference.md  kubernetes-network-policies.md  migrate-command.md  migration-guide-daemon-to-cli.md  monitoring-websocket-guide.md  network-actions.md  release-notes-v1.0.0.md  release-preparation-checklist.md  repo-config-policy-examples.md  repo-config-quick-start.md  repository-configuration-api.md  terraform-alternative-comparison.md  terraform-vs-gz-examples.md  webhook-dashboard.md
examples/: Dockerfile.example  README.md  automation-rule-example.yaml  automation-rule-templates.yaml  bulk-clone-example.yaml  bulk-clone-simple.yaml  bulk-clone.home.yaml  bulk-clone.work.yaml  bulk-clone.yml  clone-workflow.sh  extensions.yaml  git-repo-examples.yaml  gzh-development.yaml  gzh-enterprise.yaml  gzh-multi-provider.yaml  gzh-simple.yaml  gzh-unified-example.yaml  org-webhook-config-example.yaml  programmatic-usage.go  synclone-simple.yaml  vpn-hierarchy-example.yaml  webhook-policy-example.yaml
helpers/: git_helper.go
homebrew/: gzh-git-extensions.rb
results/: conversation-2025-07-16-143408.txt
samples/: bulk-clone-example.yaml  bulk-clone.work.yaml  bulk-clone.yml  cloud-config-aws.yaml  cloud-config-azure.yaml  gzh-development.yaml  gzh-enterprise.yaml  gzh-multi-provider.yaml  repo-config-audit-policies.yaml  repo-config-enterprise.yaml  (+6 more)
web/: .npmrc  (+5 more)
(+1873 files in other folders)
